--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ click==7.1.2
 dropbox==11.7.0
 idna==2.10
 mypy-extensions==0.4.3
+numpy==1.20.2
 pathspec==0.8.1
+pdqhash==0.2.2
+Pillow==8.2.0
 ply==3.11
 regex==2021.4.4
 requests==2.25.1
